--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,37 @@
-p{color:white}
+p,h1{
+    color: white;
+    width: 1280px;
+}
+
+h1{
+    text-align: center;
+    width: 1280px;
+    margin: 0;
+    padding: 20px 0;
+    color: white;
+    text-shadow: 3px 3px 1px black;
+}
+
+img {
+    margin: 0 auto;
+    display: block;
+}
+    
+
+html
+{
+    padding: 20px 20px 20px 20px;
+    background-color: #00539f;
+    font-size: 15px;
+    font-family: "Open Sans", sans-serif; 
+}
+
+body
+{
+    align-items: center;
+    width: 1280px;
+    margin: 0 auto;
+    background-color: #FF9500;
+    padding: 20px 20px 20px 20px;
+    border: 5px solid black;
+}
