--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,15 @@ h1{
     text-shadow: 3px 3px 1px black;
 }
 
+h2{
+    text-align: center;
+    width: 1280px;
+    margin: 0;
+    padding: 20px 0;
+    color: white;
+    text-shadow: 3px 3px 1px black;
+}
+
 img {
     margin: 0 auto;
     display: block;
@@ -35,3 +44,4 @@ body
     padding: 20px 20px 20px 20px;
     border: 5px solid black;
 }
+
